# miniature-todoist

./: .env.example  .gitignore  Architecture.md  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  nginx.frontend.conf  nginx.prod.conf  package.json
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
frontend/: package.json
